New Makefile from Rod

--- a/python/ceo/Makefile
+++ b/python/ceo/Makefile
@@ -4,7 +4,7 @@ PYV=$(shell python -c "import sys;t='{v[0]}.{v[1]}'.format(v=list(sys.version_in
 
 .pyx.so:
 	cython -2 --directive embedsignature=True --cplus $< -o  $<.cu
-	$(NVCC) -w $(INCS) -I$(PYTHONPATH)/include/python$(PYV) -I$(PYTHONPATH)/lib/python$(PYV)/site-packages/numpy/core/include -lineinfo -Xcompiler '-fPIC,-pthread,-O3' -o  $<.o -c  $<.cu
+	$(NVCC) -w $(INCS) -I$(PYTHONPATH)/include/python$(PYV)m -I$(PYTHONPATH)/lib/python$(PYV)/site-packages/numpy/core/include -lineinfo -Xcompiler '-fPIC,-pthread,-O3' -o  $<.o -c  $<.cu
 	$(NVCC) -shared $<.o -o $@ $(LIBS)
 
 aco:
